mobile-spacing-fix-4

--- a/css/style.css
+++ b/css/style.css
@@ -173,10 +173,10 @@ body {
 }
 
 #my-welcome-title {
-  margin-top: 150px;
+  margin-top: 120px;
 }
 
 #my-welcome-button {
-  margin-top: 80px;
-  margin-bottom: 35px;
+  margin-top: 60px;
+  margin-bottom: 15px;
 }
